--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,10 @@ hilt-navigation-compose-ver = "1.2.0"
 kotlin-ver = "1.9.24"
 appcompat = "1.7.0"
 material = "1.12.0"
-
+google-gson = "2.11.0"
+retrofit = "2.11.0"
+okhttp = "5.0.0-alpha.2"
+logging-interceptor = "5.0.0-alpha.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -36,6 +39,13 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+
+#retrofit
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "logging-interceptor" }
+google-gson = { module = "com.google.code.gson:gson", version.ref = "google-gson" }
 
 #hilt
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt-android-compiler-ver" }
@@ -57,6 +67,10 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 hilt=[
     "hilt-navigation-compose",
     "hilt-android"
+]
+
+retrofit = [
+    "retrofit", "retrofit-gson", "okhttp", "logging-interceptor"
 ]
 
 
