--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 BASE_URL="https://api.themoviedb.org/3/"
 POSTER_URL="https://image.tmdb.org/t/p/w500"
+API_KEY="ecbbdd15ebc92cd950aa05bcd6872e17"
